[package]
name = "owl-cli"
version = "0.1.0"
authors = ["Kangsu Kim <pica744@gmail.com>", "Yechan Bae <qwazpia@gmail.com>"]
license = "MIT/Apache 2.0"

[dependencies]
owl-rpc = { path = "../owl-rpc" }
clap = "2.32.0"
dotenv = "0.13.0"
env_logger = "0.5.12"
failure = "0.1.2"
log = "0.4.3"
tarpc = "0.12.0"
tokio = "0.1.7"
tokio-core = "0.1.17"
