[package]
name = "owl-cli"
version = "0.1.0"
authors = ["Kangsu Kim <pica744@gmail.com>", "Yechan Bae <qwazpia@gmail.com>"]
license = "MIT/Apache 2.0"

[dependencies]
owl-rpc = { path = "../owl-rpc" }
clap = "2.32.0"
dotenv = "0.13.0"
env_logger = "0.5.12"
failure = "0.1.2"
log = "0.4.3"
tarpc = { git = "https://github.com/PLUS-POSTECH/tarpc.git" }
toml = "0.4"
serde = "1.0.71"
serde_derive = "1.0.71"

[[bin]]
name = "owl"
path = "src/main.rs"
