[package]
name = "owl-daemon"
version = "0.1.0"
authors = ["Kangsu Kim <pica744@gmail.com>"]
license = "MIT/Apache 2.0"

[dependencies]
owl-exploit = { path = "../owl-exploit" }
chrono = "0.4.5"
diesel = { version = "1.3.2", features = [ "chrono", "postgres" ] }
dotenv = "0.13.0"
futures = "0.1.23"
tarpc = "0.12.0"
tarpc-plugins = "0.4.0"
tokio = "0.1.7"
r2d2-diesel = "1.0.0"
serde = "1.0.70"

[lib]
name = "owl_daemon"
path = "src/lib.rs"

[[bin]]
name = "owld"
path = "src/main.rs"
