[package]
name = "owl-daemon"
version = "0.1.0"
authors = ["Kangsu Kim <pica744@gmail.com>", "Yechan Bae <qwazpia@gmail.com>"]
license = "MIT/Apache 2.0"

[dependencies]
owl-exploit = { path = "../owl-exploit" }
owl-rpc = { path = "../owl-rpc" }
chrono = "0.4.5"
diesel = { version = "1.3.2", features = [ "chrono", "postgres" ] }
diesel-derive-enum = { version = "0.4.4", features = [ "postgres" ] }
dotenv = "0.13.0"
env_logger = "0.5.12"
failure = "0.1.2"
futures = "0.1.23"
log = "0.4.3"
tarpc = "0.12.0"
tokio = "0.1.7"
tokio-core = "0.1.17"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"

[lib]
name = "owl_daemon"
path = "src/lib.rs"

[[bin]]
name = "owld"
path = "src/main.rs"
