[package]
name = "owl-rpc"
version = "0.1.0"
authors = ["Kangsu Kim <pica744@gmail.com>"]

[dependencies]
chrono = { version = "0.4.5", features = ["serde"] }
failure  = "0.1.2"
tarpc = "0.12.0"
tarpc-plugins = "0.4.0"
serde = "1.0.70"
serde_derive = "1.0.70"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
